--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;700&display=swap");
+
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 10px;
+  margin: 0px;
+  font-family: "Roboto", sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.title,
+.fetching-title {
+  text-align: center;
+}
+
+section {
+  display: flex;
+  justify-content: space-around;
+}
+
+section > * {
+  width: 50%;
+  padding: 0px 20px;
+}
+
+.json-viewer {
+  outline: none;
+  width: 100%;
+  height: 400px;
+  border: 1px solid transparent;
 }
